--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="./QR.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <img src="./background.gif"/>
     <div class="container">
         <p>Hello !!<br>Iam Your QRcode Creater.</p>
         <input type="text" placeholder="Enter Text or URL" id="qrText">
